# smartmouse-simulator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  bops  cmake-format-input  cmake-format.json  test_all.sh
cmake/: Teensy.cmake  teensy-arm.toolchain.cmake
mazes/: death.mz  easy.mz  empty.mz  jank.mz  stripes.mz
mazes/tests/: 2016.mz  2017.mz  impossible.mz  test.mz
mice/: 2018.ms
robots/: CMakeLists.txt
robots/libs/: CMakeLists.txt
robots/libs/AS5048A/: AS5048A.h  CMakeLists.txt  as5048a.cpp
robots/smartmouse_2018/: 2018.ms  CMakeLists.txt  main.cpp  smartmouse_2018.yml  smartmouse_2018_description.cpp  smartmouse_2018_description.h  smartmouse_2018_plugin.cpp  smartmouse_2018_plugin.h  smartmouse_2018_robot.cpp  smartmouse_2018_robot.h  teensy_main.cpp
robots/smartmouse_2018/commands/: ArcTurn.cpp  ArcTurn.h  Backup.cpp  Backup.h  Delay.cpp  Delay.h  End.cpp  End.h  Finish.cpp  Finish.h  Forward.cpp  Forward.h  ForwardN.cpp  ForwardN.h  ForwardToCenter.cpp  ForwardToCenter.h  LEDBlink.cpp  LEDBlink.h  RepeatCommand.h  ReturnToStart.cpp  ReturnToStart.h  SolveCommand.cpp  SolveCommand.h  SolveMaze.cpp  SolveMaze.h  SpeedRun.cpp  SpeedRun.h  Stop.cpp  Stop.h  Turn.cpp  Turn.h  TurnInPlace.cpp  TurnInPlace.h  WaitForStart.cpp  WaitForStart.h  WallSmash.cpp  WallSmash.h  arc_turn.cpp  arc_turn.h  backup.cpp  (+36 more)
robots/test/: CMakeLists.txt  test_description.cpp  test_plugin.cpp  test_plugin.h
src/: CMakeLists.txt
src/cereal/: CMakeLists.txt
src/cereal/include/cereal/details/: polymorphic_impl.hpp
src/commanduino/: CMakeLists.txt  Command.cpp  CommandGroup.cpp  Scheduler.cpp  command.cpp  command_group.cpp  scheduler.cpp
src/commanduino/include/commanduino/: CommanDuino.h  Command.h  CommandGroup.h  Scheduler.h  command.h  command_group.h  commanduino.h  scheduler.h
src/commanduino/test/: CMakeLists.txt  Command_TEST.cpp  command_TEST.cpp
src/core/: AbstractMaze.cpp  CMakeLists.txt  Direction.cpp  Flood.cpp  Node.cpp  Pose.cpp  SensorReading.cpp  Solver.cpp  WallFollow.cpp  abstract_maze.cpp  direction.cpp  flood.cpp  math.cpp  maze.cpp  mouse.cpp  msgs.cpp  node.cpp  plugin.cpp  pose.cpp  sensor_reading.cpp  solver.cpp  wall_follow.cpp
src/core/include/core/: AbstractMaze.h  Flood.h  Node.h  Pose.h  SensorReading.h  WallFollow.h  abstract_maze.h  direction.h  flood.h  fwd_msgs.h  math.h  math_util.h  maze.h  maze_index.h  mouse.h  msgs.h  node.h  plugin.h  pose.h  sensor_reading.h  solver.h  wall_follow.h
src/core/test/: CMakeLists.txt  Mouse_TEST.cpp  Node_TEST.cpp  Solver_TEST.cpp  direction_TEST.cpp  math_TEST.cpp  maze_TEST.cpp  maze_index_TEST.cpp  mock_mouse.cpp  mouse_TEST.cpp  node_TEST.cpp  solver_TEST.cpp
src/core/test/include/core/test/: mock_mouse.h
src/hal/: CMakeLists.txt  arduino_hal.h  common_hal.cpp  hal.h
src/hal/arduino/: CMakeLists.txt  arduino_hal.cpp
src/hal/sim/: CMakeLists.txt  sim_hal.cpp
src/kinematic_controller/: CMakeLists.txt  IRModel.cpp  KinematicController.cpp  RegulatedMotor.cpp  RobotConfig.cpp  TrajectoryPlanner.cpp  VelocityProfile.cpp  VelocityProfileTiming.cpp  ir_model.cpp  kinematic_controller.cpp  regulated_motor.cpp  robot.cpp  robot_config.cpp  trajectory_planner.cpp  velocity_profile.cpp  velocity_profile_timing.cpp
src/kinematic_controller/include/kinematic_controller/: Functor.h  IRModel.h  KinematicController.h  RobotConfig.h  TrajectoryPlanner.h  VelocityProfile.h  calibration_error_functor.h  functor.h  kinematic_controller.h  robot.h  robot_config.h  trajectory_planner.h  velocity_profile.h  velocity_profile_timing.h
src/mock_teensyarduino/: CMakeLists.txt
src/mock_teensyarduino/arduino/: arduino_hal.cpp
src/mock_teensyarduino/common/: common_hal.cpp  common_hal.h
src/mock_teensyarduino/sim/: Arduino.h  SPI.cpp  SPI.h  sim_hal.cpp
src/mock_teensyarduino/sim/SPI/: SPI.h
src/mock_teensyduino/: CMakeLists.txt
src/mock_teensyduino/arduino/: arduino_hal.cpp
src/mock_teensyduino/common/: hal.cpp  util.cpp
src/mock_teensyduino/common/include/hal/: hal.h  util.h
src/mock_teensyduino/sim/: Arduino.h  sim_hal.cpp
src/mock_teensyduino/sim/SPI/: SPI.cpp  SPI.h
src/sim/: CMakeLists.txt  client.cpp  conversions.cpp  mainwindow.ui  ray_tracing.cpp  server.cpp  simulator.qrc  smartmouse_simulator.cpp  style.qss  time.cpp
src/sim/include/sim/: client.h  conversions.h  msgs.h  ray_tracing.h  server.h  time.h
src/sim/include/sim/widgets/: abstract_tab.h  control_plot_widget.h  maze_widget.h  pid_plot_widget.h  pid_series_data.h  sensor_widget.h  state_widget.h
src/sim/test/: CMakeLists.txt  maze_widget_TEST.cpp  server_TEST.cpp
src/sim/widgets/: control_plot_widget.cpp  controlwidget.ui  maze_widget.cpp  pid_plot_widget.cpp  pid_series_data.cpp  pidwidget.ui  sensor_widget.cpp  state_widget.cpp
src/smartmouse/: CMakeLists.txt
src/smartmouse/common/: CMakeLists.txt
src/smartmouse/common/IRSensorModeling/: Model.cpp
src/smartmouse/common/KinematicController/: KinematicController.h  RobotConfig.cpp  RobotConfig.h  TrajectoryPlanner.h
src/smartmouse/common/commanduino/: CMakeLists.txt
src/smartmouse/common/core/: AbstractMaze.cpp  AbstractMaze.h  CMakeLists.txt  Direction.cpp  Direction.h  Flood.cpp  Flood.h  Mouse.cpp  Mouse.h  Node.cpp  Node.h  Node_TEST.cpp  Plugin.h  Pose.cpp  SensorReading.cpp  SensorReading.h  Solver.cpp  Solver.h  WallFollow.cpp  WallFollow.h  math_util.h  mouse.cpp  mouse.h  util.cpp
src/smartmouse/common/kinematic_controller/: CMakeLists.txt  CalibrationErrorFunctor.h  EigenArduinoWrapper.h  Functor.h  IRModel.cpp  KinematicController.cpp  KinematicController.h  RegulatedMotor.cpp  RegulatedMotor.h  RobotConfig.cpp  RobotConfig.h  TrajectoryPlanner.cpp  TrajectoryPlanner.h  VelocityProfile.cpp  VelocityProfile.h  VelocityProfileTiming.cpp  robot.cpp  robot.h
src/smartmouse/sim/: CMakeLists.txt  Server.cpp  Server.h
src/spdlog/: CMakeLists.txt
src/wise_enum/: CMakeLists.txt
tools/: CMakeLists.txt
tools/bops/: bops  bops.py
tools/rops/: CMakeLists.txt  example_output.h.txt  rops  rops.cpp  rops.py
