if (${REAL})
    # FIXME: this probably shouldn't go here
    include(Teensy)
    add_teensy_core()
    add_library(arduino_hal common_hal.cpp arduino/arduino_hal.cpp hal.h)
    target_include_directories(arduino_hal PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(arduino_hal core teensy_core)
else ()
    add_library(sim_hal common_hal.cpp sim/sim_hal.cpp hal.h)
    target_include_directories(sim_hal PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(sim_hal core)
endif ()
